Ensure tiles are vertically stacked on mobile viewports.

--- a/assets/sass/components/analytics-4/_googlesitekit-site-goals.scss
+++ b/assets/sass/components/analytics-4/_googlesitekit-site-goals.scss
@@ -15,14 +15,13 @@
  */
 
 .googlesitekit-plugin {
-
-	.googlesitekit-site-goals-tiles-group + .googlesitekit-site-goals-tiles-group,
+	.googlesitekit-site-goals-tiles-group
+		+ .googlesitekit-site-goals-tiles-group,
 	.googlesitekit-preview-block + .googlesitekit-site-goals-tiles-group {
 		margin-top: 34px;
 	}
 
 	.googlesitekit-site-goals-tiles-group {
-
 		.googlesitekit-site-goals-tiles-group__header {
 			align-items: flex-start;
 			display: flex;
@@ -61,6 +60,16 @@
 	.googlesitekit-site-goals-tiles-group__tiles {
 		align-items: stretch;
 		display: flex;
+
+		@media (max-width: $bp-mobileOnly) {
+			flex-wrap: wrap;
+			gap: 8px;
+
+			.googlesitekit-site-goals-tile {
+				margin-left: 0;
+				width: 100%;
+			}
+		}
 	}
 
 	.googlesitekit-site-goals-tile {
@@ -106,27 +115,27 @@
 				top: 50%;
 				transform: translateY(-50%);
 				width: 9px;
-				}
 			}
+		}
 
-			.googlesitekit-site-goals-tile__title.googlesitekit-typography {
-				font-weight: $fw-normal;
-				letter-spacing: $ls-s;
-				line-height: 20px;
-				margin: 0 8px 0 0;
-			}
+		.googlesitekit-site-goals-tile__title.googlesitekit-typography {
+			font-weight: $fw-normal;
+			letter-spacing: $ls-s;
+			line-height: 20px;
+			margin: 0 8px 0 0;
+		}
 
-			.googlesitekit-site-goals-tile__header-label.googlesitekit-typography {
-				color: $c-surfaces-on-background-variant;
-				letter-spacing: $ls-s;
-				line-height: 20px;
-				margin: 0;
-			}
+		.googlesitekit-site-goals-tile__header-label.googlesitekit-typography {
+			color: $c-surfaces-on-background-variant;
+			letter-spacing: $ls-s;
+			line-height: 20px;
+			margin: 0;
+		}
 
-			.googlesitekit-site-goals-tile__body {
-				display: flex;
-				flex: 1;
-			}
+		.googlesitekit-site-goals-tile__body {
+			display: flex;
+			flex: 1;
+		}
 
 		.googlesitekit-site-goals-tile__metric-container {
 			flex: 1;
@@ -212,26 +221,25 @@
 	}
 
 	.googlesitekit-site-goals-goal-drivers-group {
-
 		.googlesitekit-site-goals-tiles-group__tiles {
 			display: block;
 		}
 
-			.googlesitekit-site-goals-goal-drivers-section__tiles {
-				display: grid;
-				gap: 8px;
-				grid-template-columns: 1fr;
+		.googlesitekit-site-goals-goal-drivers-section__tiles {
+			display: grid;
+			gap: 8px;
+			grid-template-columns: 1fr;
 
-				@media (min-width: $bp-nonMobile) {
-					align-items: start;
-					gap: 36px 42px;
-					grid-template-columns: repeat(2, minmax(0, 1fr));
-				}
-
-				@media (min-width: $bp-desktop) {
-					grid-template-columns: repeat(3, minmax(0, 1fr));
-				}
+			@media (min-width: $bp-nonMobile) {
+				align-items: start;
+				gap: 36px 42px;
+				grid-template-columns: repeat(2, minmax(0, 1fr));
 			}
+
+			@media (min-width: $bp-desktop) {
+				grid-template-columns: repeat(3, minmax(0, 1fr));
+			}
+		}
 
 		.googlesitekit-site-goals-goal-drivers-section__tile {
 			min-width: 0;
